# BlockSI

./: .gitignore
Data/: 2025-12-09_Stream.csv  2025-12-09_test.csv  2025-12-13_Stream.csv  2025-12-14_Stream.csv  2025-12-14_TestMax_p25.csv  2025-12-15_Stream.csv  2025-12-16_Stream.csv  2025-12-18_2025-12-16_5LPM_PowerSweep.csv  2025-12-18_2025-12-16_TestingPowerSweep.csv  2025-12-23_Stream.csv  2025-12-24_Stream.csv
Interfaces/ControlSystem/: CMakeLists.txt  README.md  build.ps1  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.template  sdkconfig.old
Interfaces/ControlSystem/main/: CMakeLists.txt  Kconfig.projbuild  backup_storage.c  backup_storage.h  blocksi_pins.h  dac_power_test.c  dfrobot_ozone.c  dfrobot_ozone.h  dosimetry.c  dosimetry.h  ds3502_digipot.c  ds3502_digipot.h  lan_client.c  lan_client.h  main.c  main_backup_handlers.c  max31855_thermocouple.c  max31855_thermocouple.h  mcp4725_dac.c  mcp4725_dac.h  model_106h_interface.c  model_106h_interface.h  o3_power_control.c  o3_power_control.h  peripherals.c  peripherals.h  power_calibration.c  power_commands.c  relay_control.c  relay_control.h  sensor_aggregator.c  sensor_aggregator.h
Interfaces/PC/: 2025-12-10_Stream.csv  2025-12-12_Stream.csv  2025-12-14_TestMax.csv  2025-12-18_2025-12-16_CalibrationTesting.xlsb.xlsx  2025-12-18_2025-12-16_TestingPowerSweep (version 1).xlsb.xlsx  2025-12-18_Stream.csv  2026-01-02_Stream.csv  2026-01-03_Stream.csv  blocksi_dashboard.py  blocksi_dashboard_v4.py  blocksi_dashboard_v5.py  blocksi_data.csv  blocksi_receiver.py
Old/: Dockerfile  docker-compose.yml
